<resources>
    <string name="app_name">Discover Buc</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>


    <!-- Common -->
    <string name="heading_startup">Discover Bucharest with us</string>
    <string name="back_button">Back</string>
    <string name="remember_me">Remember me</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="next_button">Next</string>
    <string name="close_button">Close</string>
    <string name="ask_name">How should we call you?</string>
    <string name="ask_age">Enter your birthday</string>
    <string name="ask_prefs">What do you prefer?</string>
    <string name="ask_phone">Enter your phone number</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="forgotPass">Forgot your password?</string>

    <!-- Activities -->
    <string name="nature">Walking in nature</string>
    <string name="restaurants">Eating in a fancy restaurant</string>
    <string name="coffee_shops">Hanging out in a coffee shop</string>
    <string name="museums">Wandering in a museum </string>
    <string name="mall">Shopping</string>
    <string name="pubs">Spending time in a pub</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="register_headline">Join Us Today</string>
    <string name="verify_code">CODE VALIDATION</string>
    <string name="verify_code_text">Enter the code you have received!</string>
    <string name="finish_button">Finish</string>

    <!-- Forgot Pass -->
    <string name="forgot_pass_headline">Forgot your password?</string>
    <string name="forgot_pass_details">Enter your account\'s username</string>
    <string name="pass_changed">Password changed successfully</string>
    <string name="new_pass_headline">Create a new password</string>

    <!-- Hints -->
    <string name="hint_user">Enter your username</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_confirm_password">Retype your password</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_code">Enter the code</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="hint_new_pass">Enter a new password</string>
    <string name="hint_new_pass_confirm">Confirm your new password</string>

    <!-- Buttons -->
    <string name="sign_out">Log out</string>

    <!-- UsersMenu -->
    <string name="todaysRec">Today\'s Recommendation</string>
    <string name="otherRec">Other Recommendations For You</string>

    <!-- Menu Buttons -->
    <string name="nav_home">HOME</string>
    <string name="nav_wishlist">WISHLIST</string>
    <string name="nav_prof">PROFILE</string>
    <string name="nav_map">MAP</string>

    <!-- Wishlist -->
    <string name="wishlist_not_found">Your wishlist is empty! Add some locations from menu!</string>

    <!-- Profile -->
    <string name="edit_preferences">Edit your preferences</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <!-- Pop Activities -->
    <string name="vote_rating">Vote</string>
    <string name="title_activity_maps">Map</string>

    <!-- MAP ACTIVITY -->
    <string name="cannot_access_loc">You haven\'t permitted the location access</string>
    <string name="ok">Ok</string>
    <string name="click_info">Click for info</string>

</resources>