<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/icon_home"
        android:iconTint="@color/light_black"
        app:cnb_backgroundColor = "@color/yellow"
        />

    <item
        android:id="@+id/bottom_nav_wishlist"
        android:title="@string/nav_wishlist"
        android:icon="@drawable/icon_wishlist"
        android:iconTint="@color/light_black"
        app:cnb_backgroundColor = "@color/yellow"
        />

    <item
        android:id="@+id/bottom_nav_map"
        android:title="@string/nav_map"
        android:icon="@drawable/icon_map"
        android:iconTint="@color/light_black"
        app:cnb_backgroundColor = "@color/yellow"
        />

    <item
        android:id="@+id/bottom_nav_profile"
        android:title="@string/nav_prof"
        android:icon="@drawable/icon_user"
        android:iconTint="@color/light_black"
        app:cnb_backgroundColor = "@color/yellow"
        />


</menu>