<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="30dp"
    tools:context=".Register2.RegisterPreferences">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/register_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:padding="5dp"
            android:text="@string/back_button"
            android:transitionName="transition_back_button"
            android:onClick="callBackToRegisterName"/>

        <TextView
            android:id="@+id/register_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_headline"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:transitionName="transition_register_headline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="317dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_prefs"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/nature"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/restaurants"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/coffee_shops"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/museums"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/register_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:text="@string/next_button"
            android:transitionName="transition_next_button" />

        <Button
            android:id="@+id/register_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:elevation="5dp"
            android:text="@string/login"
            android:transitionName="transition_login"
            android:onClick="callLoginScreenFromRegPrefs"/>


    </LinearLayout>

</ScrollView>