<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register2.PasswordRecovery.CreateNewPass"
    android:padding="30dp"
    android:transitionName="transition_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/close_createPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_button"
            android:textColor="@color/black"
            android:background="#00000000"
            android:onClick="closePassCreate"
            android:transitionName="transition_next_button"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pass_headline"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="50dp"
            />

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_pass"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="50dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_pass_confirm"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/next_to_changedPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            android:onClick="changePass"
            android:transitionName="transition_changedPass"
            />


    </LinearLayout>

</ScrollView>