<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".Register2.Login"
    android:transitionName="transition_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/back_button"
            android:onClick="callBackToStartup"
            android:transitionName="transition_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">
            <!--        Username-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black">
                <!-- starticondrawable, starticontine, endiconmmode, icontint -->


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <!--        Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black">
                <!--  starticondrawable, starticontine, endiconmmode, icontint -->


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:layout_marginTop="20dp"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:text="@string/remember_me"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:layout_centerVertical="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPass"
                android:background="#00000000"
                android:textSize="12sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/login_to_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:onClick="loginUser"
            android:transitionName="transition_login_to_dashboard"
            />

        <Button
            android:id="@+id/login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:background="#00000000"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:transitionName="transition_register_page"
            android:onClick="callRegisterFromLogin"
            />

    </LinearLayout>

</ScrollView>