<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register2.Register.Verification"
    android:transitionName="transition_verification_page"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/close_validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_button"
            android:textColor="@color/black"
            android:background="#00000000"
            android:onClick="closeVerif"
            android:transitionName="transition_next_button"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/verify_code"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:padding="20dp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_code_text"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"/>

<!--        <com.chaos.view.PinView-->
<!--            android:id="@+id/pinView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:itemCount="6"-->
<!--            app:itemWidth="50dp"-->
<!--            app:itemHeight="50dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="50dp"-->
<!--            app:lineColor="@color/colorPrimary"-->
<!--            style="@style/PinWidget.PinView"-->
<!--            android:inputType="number"-->
<!--            android:cursorVisible="true"-->
<!--            app:cursorColor="@color/black"-->
<!--            app:hideLineWhenFilled="true"-->
<!--            app:itemRadius="15dp"-->
<!--            />-->

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="50dp"
            app:pinHeight="50dp"
            app:pinLength="6"
            app:inputType="number"
            app:password="false"
            app:splitWidth="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/next_verifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:onClick="Finish"
            android:transitionName="transition_login"
            />


    </LinearLayout>

</ScrollView>